Finish drink conversion, some ingredient conversion
